--- a/.env.local
+++ b/.env.local
@@ -8,12 +8,15 @@ DB_NAME=db_clockwork
 DB_PORT=5430
 
 HOST=localhost
-PORT=8080
+PORT=8000
 
 # Authentication credentials
 TOKEN_TTL=2000
-JWT_PRIVATE_KEY=clockworkjwt
+JWT_SECRET=clockworkjwt20230717
 
 MIDTRANS_KEY=
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
 
